# project_folder

./: .coverage  .gitignore  README.md  config.py  main.py  pyproject.toml
data/: vacancies.json
src/: base_api.py  base_json.py  hh.py  json_saver.py  other_formats.py  vacancies.xlsx  vacancies_hh.py
tests/: test_hh.py  test_json_saver.py  test_other_formats.py  test_vacancies.xlsx  test_vacancies_hh.py
